--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,62 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/charity-donation?serverTimezone=UTC
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/charity-donation?serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=coderslab
+#
+#
+#spring.mvc.view.prefix=/WEB-INF/views/
+#spring.mvc.view.suffix=.jsp
+#spring.web.locale=pl_PL
+#spring.web.locale-resolver=fixed
+#
+#logging.level.org.springframework.web=DEBUG
+#logging.level.org.hibernate=ERROR
+
+
+# DATABASE
+spring.datasource.url=jdbc:mysql://localhost:3306/charity-donation?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false&characterEncoding=utf-8&useUnicode=true
 spring.datasource.username=root
 spring.datasource.password=coderslab
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Basic configuration properties for JPA
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+# update MySQL acc. entities of Hibernate
+spring.jpa.hibernate.ddl-auto=update
+# formatowanie SQL w logach
+spring.jpa.properties.hibernate.format_sql=true
 
+# UTF-8 characters ? NOT NEEDED BELOW (proper setting @ data base is enough ?characterEncoding=utf-8&useUnicode=true?)
+#spring.jpa.properties.hibernate.connection.characterEncoding=utf8
+#spring.jpa.properties.useUnicode=true
+#spring.jpa.properties.characterEncoding=utf8
+#spring.jpa.properties.CharSet=utf8
+
+# Basic configuration of built-in Tomcat
+server.address=localhost
+server.port=8080
+
+# WEB LAYER
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+# default date format (needed also to set conversion data way in website)
+spring.mvc.data-format=yyyy-MM-dd
+
+# language default choice
 spring.web.locale=pl_PL
 spring.web.locale-resolver=fixed
+# language changed based on header in web browser
+#spring.mvc.locale-resolver=accept_header
 
+# stopped showing/view stacktrace (errors) in web browser
+server.error.whitelabel.enabled=true
+server.error.include-stacktrace=always
+server.error.include-exception=true
+
+# logger (logs/status print in console message in format: date time DEBUG where and what happened)
+logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=ERROR
+logging.level.org.hibernate=DEBUG
+logging.level.pl.coderslab.charity=DEBUG
